--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,10 @@
 ---
 output: 
   github_document:
-    toc: true
+    #toc: true
 ---
+
+# cloudos <img src="man/figures/logo/hexlogo.png" align="right" height=140/>
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
@@ -15,18 +17,16 @@ knitr::opts_chunk$set(
 )
 ```
 
-# cloudos <img src="logo/hexlogo.png" align="right" height=140/>
-
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 [![R build status](https://github.com/lifebit-ai/cloudos/workflows/R-CMD-check/badge.svg)](https://github.com/lifebit-ai/cloudos/actions)
 <!-- badges: end -->
 
-The 'CloudOS' client library for R makes it easy to interact with CloudOS <https://cloudos.lifebit.ai/> in the R environment for analysis.
+**cloudos** R package makes it easy to interact with Lifebit's CloudOS <https://cloudos.lifebit.ai/> platform in the R environment.
 
 ## Installation
 
-You can install the released version of cloudos from [GitHub](https://github.com/lifebit-ai/cloudos/) at this moment. (Will be listed on  [CRAN](https://CRAN.R-project.org) as well)
+You can install the released version of **cloudos** from [GitHub](https://github.com/lifebit-ai/cloudos/) at this moment. (Will be listed on  [CRAN](https://CRAN.R-project.org) as well)
 
 ```{r, eval=FALSE}
 if (!require(remotes)) { install.packages("remotes") }
@@ -35,15 +35,17 @@ if (!require(remotes)) { install.packages("remotes") }
 
 ## Usage
 
-### Load the cloudos R-client library
+Bellow are given the demonstration of how the **cloudos** package can be used.
+
+### Load the library
 
 ```{r}
 library(cloudos)
 ```
 
-### Setup essentials 
+### Setup login details
 
-Require few cloudos server login details, which will used in next step to create a `my_cloudos` object
+To interact with the cloudos server, it require few login details.
 
 Note: If no `base_url` given the default is https://cloudos.lifebit.ai/
 
@@ -56,20 +58,23 @@ my_auth <- Sys.getenv("cloudos_Bearer_token")
 my_team_id <- Sys.getenv("cloudos_team_id")
 ```
 
-### Create a cloudos object
+### Connect to CloudOS
 
-This object can be used as input to other functions, which directly requires to communicate with the cloudos server.
+Lets create a cloudos object with the login details, which can help us connect to cloudos server.
 
 ```{r}
 my_cloudos <- cloudos::connect_cloudos(base_url = cb_base_url,
-                               auth = my_auth,
-                               team_id = my_team_id)
+                                       auth = my_auth,
+                                       team_id = my_team_id)
 my_cloudos
 ```
+## Application - Cohort Browser
+
+Cohort Browser is part of Lifebit's cloudos offering. Lets explore how to interact with this in R environment.
 
 ### List Cohorts
 
-List available cohorts in a workspace.
+To check list of available cohorts in a workspace.
 
 ```{r}
 cohorts <- cloudos::cb_list_cohorts(my_cloudos)
@@ -78,39 +83,44 @@ head(cohorts,5)
 
 ### Create a cohort
 
-Create a new cohort.
+To create a new cohort. 
 
 ```{r, eval=F}
 my_cohort <- cloudos::cb_create_cohort(my_cloudos,
-              cohort_name = "Cohort-R",
-              cohort_desc = "This cohort is for testing purpose, created from R.")
+                                       cohort_name = "Cohort-R",
+                                       cohort_desc = "This cohort is for testing purpose, created from R.")
 my_cohort
 ```
 
 ### Get a cohort
 
-Get a available cohort in to a cohort R object.
+Get a available cohort in to a cohort R object. This cohort object can be used in many different other functions.
 
 ```{r}
-my_cohort <- cloudos::cb_load_cohort(my_cloudos, cohort_id = "5f6228133097cc7a6504fb76")
+my_cohort <- cloudos::cb_load_cohort(cloudos = my_cloudos, 
+                                     cohort_id = "5f6228133097cc7a6504fb76")
 my_cohort
 ```
 
-### Get sample (participants) table
+### Get samples table
 
-Get all the sample (participants) table for a cohort. 
+Get all the samples (participants) table for a cohort with phenotypic filters applied.
 
 ```{r}
-cohort_samples <- cloudos::cb_get_samples_table(my_cloudos, my_cohort)
+cohort_samples <- cloudos::cb_get_samples_table(cloudos = my_cloudos, 
+                                                cohort = my_cohort)
 head(cohort_samples, 5)
 ```
 
 ### Get sample filters plot
 
-This is a work in progress feature.
+Get ggplots for all the applied phenotypic filters for a cohort. 
+
+**This is a work in progress feature.**
 
 ```{r}
-cohort_filters <- cb_get_cohort_filters(object = my_cloudos, cohort = my_cohort)
+cohort_filters <- cb_get_cohort_filters(cloudos = my_cloudos, 
+                                        cohort = my_cohort)
 plot_list <- cb_plot_filters(cohort_filters)
 library(ggpubr)
 ggpubr::ggarrange(plotlist = plot_list)
@@ -123,55 +133,65 @@ Get all the genotypic table for a cohort.
 
 ```{r}
 #cohort_genotype <- cloudos::cb_get_genotypic_table(my_cloudos, my_cohort)
-cohort_genotype <- cloudos::cb_get_genotypic_table(my_cloudos)
+cohort_genotype <- cloudos::cb_get_genotypic_table(cloudos = my_cloudos)
 head(cohort_genotype, 5)
 ```
 
 ### Filtering
 
-#### Search avaiable filters
+#### Search phenotypic filters
+
+Search for phenotypic filters based on a term.
 
 ```{r}
-all_filters <- cloudos::cb_search_phenotypic_filters(my_cloudos, term = "cancer")
+all_filters <- cloudos::cb_search_phenotypic_filters(cloudos = my_cloudos, 
+                                                     term = "cancer")
 head(all_filters, 5)
 ```
-
-#### Phenotype filtering
+Lets choose one filter from above table
 
 ```{r}
-# lets apply this first filter
-all_filters[1,]
+# apply this first row filter
+my_phenotypic_filter <- all_filters[1,]
+my_phenotypic_filter
+```
 
+#### Apply phenotypic filter
+
+We can get statistic of sample numbers in a cohort for which a filter is applied.
+
+```{r}
 # phenotype filter
-cohort_with_filters <- cloudos::filter_samples(my_cloudos, 
-                                   cohort = my_cohort, 
-                                   filter_id = all_filters[1,]$id)
+cohort_with_filters <- cloudos::cb_get_filter_statistics(my_cloudos, 
+                                     cohort = my_cohort, 
+                                     filter_id = my_phenotypic_filter$id)
 cohort_with_filters
 ```
 
+We can get number of total participants after applying a filter.
+
 ```{r}
 # filter participants
-participants_with_fiter <- cloudos:::cb_filter_participants(my_cloudos,
+total_participants_with_filter <- cloudos:::cb_filter_participants(my_cloudos,
                                                 cohort = my_cohort, 
-                                                filter_id = all_filters[1,]$id)
+                                                filter_id = my_phenotypic_filter$id)
  
-participants_with_fiter
+total_participants_with_filter
 ```
+#### Save a filter
+
+Save a filter into the database.
 
 ```{r}
 # apply filter (cb_genotypic_save) 
 gs <- cloudos::cb_genotypic_save(my_cloudos,
-                     cohort = my_cohort,
-                     filter_id = all_filters[1,]$id)
+                                 cohort = my_cohort,
+                                 filter_id = my_phenotypic_filter$id)
 
 gs
 ```
 
-```{r}
-df <- cloudos::cb_filter_metadata(my_cloudos,
-                     filter_id = all_filters[1,]$id)
-df
-```
+
 
 ### Additional for UI
 
